docroot/themes/custom/vagovadmin/assets/scss/_paragraphs.scss
.node--view-mode-full {
  //.field--name-field-steps .field__item,
  .paragraph {
    border: #dddddd dotted;
    //margin: 1rem;
    //padding: .5rem;
    background-color: rgba(220, 225, 230, .2);

    &:hover {
      background-color: rgba(220, 245, 230, .2);
    }
    .field--label-above {
      .field__label {
        font-size: .6rem;
      }
    }
  }

  .proof-label {
    float: right;
    font-size: .8rem;
    color: #336633;
    line-height: 1;
    margin-right: 2rem;
    font-weight: 700;
  }

  .paragraph--type--list-of-link-teasers .field--name-field-title {
    font-size: 20px;
    font-weight: 700;
    font-family: Bitter, Georgia, Cambria, Times New Roman, Times, serif;
    line-height: 1.3;
    margin-bottom: .5em;
  }

  .field--name-field-intro-text .field__item {
    font-family: Bitter, Georgia, Cambria, Times New Roman, Times, serif;
    font-size: 1.25rem;
    font-weight: 400;
    max-width: 77rem;
    line-height: 2rem;
    margin: 0 1rem;
  }

  .usa-accordion-button,
  .paragraph--type--collapsible-panel-item .field--name-field-title {
    background-color: #ddd;
    padding: .8rem;
    font-weight: 700;
    margin-top: 1rem;
  }

  .additional-info-title {
    border-bottom: 2px dotted #0071bb;
    color: #323a45;
  }

  .paragraph.paragraph--type--spanish-translation-summary {
    padding-left: calc(2rem - 7px);
    border-left: 7px solid #9bdaf1;
  }

}

.node-form {
  a.proof-edit {
    display: none;
  }
}

